# AI-Development-Practice-stuff

./: README.md
Chatbots/CV_BOT/: CV_Bot.py  readme.md  summary.txt
Chatbots/CV_BOT/me/: summary.txt
tictactoe/: Readme.md  tictactoe.py
transcriptor/: .gitignore  README.md  TranscriptorLocal.spec  TranscriptorLocal8501.spec  pyproject.toml
transcriptor/scripts/: build_exe.ps1
transcriptor/src/transcriptor_app/: __init__.py  app.py  config.py  launcher.py  srt.py  transcription.py
transcriptor/tests/: test_srt.py
